fixed menu uneveness

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -221,6 +221,16 @@ body{
 		justify-content: space-around;
 		background-color: $menu-sub;
 	}
+	.cont-subs{
+		a{
+			//border: 1px solid blue;
+			height: 100%;
+		}
+		margin-bottom: 5px;
+		margin-top: -5px;
+
+		//border: 1px solid red;
+	}
 	li {
 		//border: 1px solid green;
 		height: 50px;
